[project]
name = "uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zain Ali", email = "za24m04@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.4",
    "langchain>=0.3.15",
    "langchain-google-genai>=2.0.9",
    "litellm>=1.59.8",
]


[project.scripts]
hello = "uv_project.main:hello"
main = "uv_project.main:main"

gemini = "uv_project.litellm:gemini"
gemini2 = "uv_project.litellm:gemini2"

langchain = "uv_project.langchain:langchain"
langchain2 = "uv_project.langchain:langchain2"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
